--- a/itl_from_bill_to_invoice/views/account_move_views.xml
+++ b/itl_from_bill_to_invoice/views/account_move_views.xml
@@ -6,11 +6,13 @@
       <field name="model">account.move</field>
       <field name="inherit_id" ref="account.view_move_form"/>
       <field name="arch" type="xml">
-        <xpath expr="//button[@name='action_post']" position="after">
+        <header position="inside">
+            <field name="state" invisible="1"/>
+            <field name="move_type" invisible="1"/>
           <button name="create_customer_invoice" string="Create Customer Invoice" class="oe_highlight"
                         type="object"
-                        attrs="{'invisible': ['|',('state', '!=', 'posted'),('type', 'not in', ('in_invoice'))]}"/>
-        </xpath>
+                        attrs="{'invisible': ['|',('state', '!=', 'posted'),('move_type', 'not in', ('in_invoice'))]}"/>
+        </header>
       </field>
     </record>
 
