--- a/itl_bill_from_portal/views/views.xml
+++ b/itl_bill_from_portal/views/views.xml
@@ -6,11 +6,12 @@
       <field name="model">account.move</field>
       <field name="inherit_id" ref="account.view_move_form"/>
       <field name="arch" type="xml">
-        <header position="inside">
-          <button name="create_customer_invoice" string="Create Customer Invoice" class="oe_highlight"
-                        type="object"
-                        attrs="{'invisible': ['|',('state', '!=', 'posted'),('move_type', 'not in', ('in_invoice'))]}"/>
-        </header>
+        <group id="other_tab_group" position="inside">
+          <group string="Vendor Period of Billing">
+            <field name="period_from_date" readonly="1" force_save="1"/>
+            <field name="period_to_date" readonly="1" force_save="1"/>
+          </group>
+        </group>
       </field>
     </record>
 
